--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
 <body>
 <div id="wrapper">
   <header>
-     <h1>JavaJam Coffee Bar</h1>
+     <h1> <a href="index.html">JavaJam Coffee Bar</a> </h1>
   </header>
   <nav>
-    <a href="index.html">Home</a> &nbsp; 
-    <a href="menu.html">Menu</a> &nbsp; 
-    <a href="music.html">Music</a> &nbsp; 
-    <a href="jobs.html">Jobs</a>
-  </nav>
-  <div id="homehero"></div>
+    <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="menu.html">Menu</a></li> 
+    <li><a href="music.html">Music</a></li> 
+   <li><a href="jobs.html">Jobs</a></li>
+    </ul>
+</nav>
+  
   <main>
+    <div id="homehero"></div>
     <h2>Follow the Winding Road to JavaJam</h2>
     <p>“We&#8217;re a little out of the way, but take a drive in the country down Garrett Bay Road to JavaJam today! Indulge in our locally roasted free-trade coffee and home-made pastries. You&#8217;ll feel right at home at JavaJam!”</p>
-    <h3>JavaJam Coffe Bar Features</h3>
+    <h3>JavaJam Coffee Bar Features</h3>
     <ul>
       <li>Specialty Coffee and Organic Tea</li>
       <li>Bagels, Muffins, and Gluten-free Pastries</li>
